@@ -397,7 +397,12 @@ task functional(type: Test, description: 'Runs the functional tests.', group: 'V
 }
 
 test {
+    // set heap size for the test JVM(s)
+    minHeapSize = "128m"
     maxHeapSize = "512m"
+
+    // set JVM arguments for the test JVM(s)
+    jvmArgs '-XX:MaxPermSize=256m'
 }
 
 pitest {
